--- a/client/react-app/package.json
+++ b/client/react-app/package.json
@@ -6,6 +6,7 @@
 		"start": "next start"
 	},
 	"dependencies": {
+		"@babel/runtime": "^7.26.9",
 		"@csstools/normalize.css": "^12.0.0",
 		"gsap": "^3.11.1",
 		"locomotive-scroll": "^4.1.4",
@@ -26,6 +27,10 @@
 		"slick-carousel": "^1.8.1"
 	},
 	"devDependencies": {
-		"sass": "^1.54.5"
+		"@babel/plugin-transform-runtime": "^7.26.9",
+		"@types/react": "19.0.10",
+		"@types/react-dom": "^19.0.4",
+		"sass": "^1.54.5",
+		"typescript": "5.7.3"
 	}
 }
