--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -70,6 +70,9 @@ services:
          dockerfile: Dockerfile
       ports:
          - "3000:3000"
+      depends_on:
+         - nginx
+         - php
       volumes:
          - ./client/react-app:/app
          - /app/node_modules
