--- a/server/hosts/api.conf
+++ b/server/hosts/api.conf
@@ -1,12 +1,12 @@
 server {
-    client_max_body_size 20M;
-    listen 80 default_server;
-    server_name localhost;
-    
-    root /var/www/erp;
+    #compression text and fules
+	client_max_body_size 20M;
+    listen 80 default_server http2;
     index index.php;
+    server_name localhost;
+    rewrite ^/product-details/$ /product-details permanent; 
+    root /var/www/erp;
 
-    # Serve PHP backend
     location ~ \.php$ {
         try_files $uri =404;
         fastcgi_split_path_info ^(.+\.php)(/.+)$;
@@ -16,5 +16,10 @@ server {
         fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
         fastcgi_param PATH_INFO $fastcgi_path_info;
         client_max_body_size 10m;
+        
+    }
+    # Перенаправление запросов на index.php
+    location / {
+        try_files $uri $uri/ /index.php?$query_string;
     }
 }
