--- a/client/react-app/package.json
+++ b/client/react-app/package.json
@@ -9,6 +9,7 @@
 		"@babel/runtime": "^7.26.9",
 		"@csstools/normalize.css": "^12.0.0",
 		"axios": "^1.8.1",
+		"framer-motion": "^12.5.0",
 		"gsap": "^3.11.1",
 		"locomotive-scroll": "^4.1.4",
 		"mobx": "^6.6.2",
