--- a/client/react-app/package.json
+++ b/client/react-app/package.json
@@ -10,7 +10,7 @@
 		"@csstools/normalize.css": "^12.0.0",
 		"axios": "^1.8.1",
 		"framer-motion": "^12.5.0",
-		"gsap": "^3.11.1",
+		"gsap": "^3.13.0",
 		"locomotive-scroll": "^4.1.4",
 		"mobx": "^6.6.2",
 		"mobx-react": "^7.5.3",
@@ -30,6 +30,7 @@
 	},
 	"devDependencies": {
 		"@babel/plugin-transform-runtime": "^7.26.9",
+		"@svgr/webpack": "^8.1.0",
 		"@types/react": "19.0.10",
 		"@types/react-dom": "^19.0.4",
 		"sass": "^1.54.5",
