--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,87 +1,93 @@
-version: "3"
+version: "3.8"
+
 services:
-   # Database service
-   mysql:
-      image: mysql:8.0
-      command: --default-authentication-plugin=mysql_native_password
-      restart: always
-      environment:
-         MYSQL_ROOT_PASSWORD: hacked5430367aA!
-         MYSQL_PASSWORD: hacked5430367aA!
-         MYSQL_DATABASE: bill_manager_c
-         TZ: "Europe/Kiev" # Установка временной зоны
-      ports:
-         - "3306:3306"
-      volumes:
-         - mysql_data:/var/lib/mysql # Добавляем volume для хранения данных
+  mysql:
+    image: mysql:8.0
+    command: --default-authentication-plugin=mysql_native_password
+    restart: always
+    env_file:
+      - .env
+    environment:
+      MYSQL_ROOT_PASSWORD: ${MYSQL_ROOT_PASSWORD}
+      MYSQL_PASSWORD:      ${MYSQL_PASSWORD}
+      MYSQL_DATABASE:      ${MYSQL_DATABASE}
+      TZ:                  ${TZ}
+    ports:
+      - "3306:3306"
+    volumes:
+      - mysql_data:/var/lib/mysql
 
-   # phpMyAdmin service
-   phpmyadmin:
-      container_name: phpmyadmin
-      image: phpmyadmin/phpmyadmin:latest
-      ports:
-         - "8082:80"
-      environment:
-         PMA_HOST: mysql
-         UPLOAD_LIMIT: 500M
+  phpmyadmin:
+    container_name: phpmyadmin
+    image: phpmyadmin/phpmyadmin:latest
+    env_file:
+      - .env
+    environment:
+      PMA_HOST:     ${DB_HOST}
+      UPLOAD_LIMIT: 500M
+    ports:
+      - "8082:80"
 
-   # PHP service with PHP-FPM
-   php:
-      build: ./server/images
-      links:
-         - mysql
-      volumes:
-         - ./server/www:/var/www
-         - ./server/www/erp/certs:/etc/ssl/certs:rw
-         - ./server/images/www.conf:/usr/local/etc/php-fpm.d/www.conf:ro
-         - ./tmp/nomenclature_images:/tmp/nomenclature_images
+  php:
+    build: ./server/images
+    env_file:
+      - .env
+    depends_on:
+      - mysql
+    environment:
+      DB_HOST:          ${DB_HOST}
+      DB_DATABASE:      ${DB_DATABASE}
+      DB_USERNAME:      ${DB_USERNAME}
+      DB_PASSWORD:      ${DB_PASSWORD}
+      API_SECRET:       ${API_SECRET}
+      REDIS_SERVERS:    ${REDIS_SERVERS}
+      PHP_MEMORY_LIMIT: ${PHP_MEMORY_LIMIT}
+      ENCRYPTION_KEY:   ${ENCRYPTION_KEY}
+    volumes:
+      - ./server/www:/var/www
+      - ./server/www/erp/certs:/etc/ssl/certs:rw
+      - ./server/images/www.conf:/usr/local/etc/php-fpm.d/www.conf:ro
+      - ./tmp/nomenclature_images:/tmp/nomenclature_images
 
-      environment:
-         - DB_HOST=mysql
-         - DB_DATABASE=bill_manager_c
-         - DB_USERNAME=root
-         - DB_PASSWORD=hacked5430367aA!
-         - API_SECRET=your_secret_key
-         - REDIS_SERVERS=redis-node1:6379,redis-node2:6379,redis-node3:6379
-         - PHP_MEMORY_LIMIT=1G
-         - ENCRYPTION_KEY=asdzxc123
-   # Nginx service
-   nginx:
-      image: nginx:latest
-      ports:
-         - "80:80"
-         - "443:443"
-      volumes:
-         - ./server/hosts:/etc/nginx/conf.d:ro
-         - ./server/www:/var/www
-         - ./server/logs:/var/log/nginx
-      links:
-         - php
-      environment:
-         - DB_HOST=mysql
-         - DB_DATABASE=bill_manager_c
-         - DB_USERNAME=root
-         - DB_PASSWORD=hacked5430367aA!
+  nginx:
+    image: nginx:latest
+    env_file:
+      - .env
+    depends_on:
+      - php
+    environment:
+      DB_HOST:     ${DB_HOST}
+      DB_DATABASE: ${DB_DATABASE}
+      DB_USERNAME: ${DB_USERNAME}
+      DB_PASSWORD: ${DB_PASSWORD}
+    ports:
+      - "80:80"
+      - "443:443"
+    volumes:
+      - ./server/hosts:/etc/nginx/conf.d:ro
+      - ./server/www:/var/www
+      - ./server/logs:/var/log/nginx
 
-   # React frontend service
-   react-app:
-      build:
-         context: ./client/react-app # ✅ Ensure this path is correct
-         dockerfile: Dockerfile
-      ports:
-         - "3000:3000"
-      depends_on:
-         - nginx
-         - php
-      volumes:
-         - ./client/react-app:/app
-         - /app/node_modules
-      environment: # ✅ Moved environment outside of build
-         - WATCHPACK_POLLING=true
-         - NODE_ENV=development
-         - REACT_APP_PATH=http://127.0.0.1
+  react-app:
+    build:
+      context: ./client/react-app
+      dockerfile: Dockerfile
+    env_file:
+      - .env
+    depends_on:
+      - nginx
+      - php
+    environment:
+      WATCHPACK_POLLING: ${WATCHPACK_POLLING}
+      NODE_ENV:         ${NODE_ENV}
+      REACT_APP_PATH:   ${REACT_APP_PATH}
+    ports:
+      - "3000:3000"
+    volumes:
+      - ./client/react-app:/app
+      - /app/node_modules
 
-# Добавляем секцию volumes
+# ← This section must not be indented under "services":
 volumes:
-   mysql_data:
-   rabbitmq_data:
+  mysql_data:
+  rabbitmq_data:
