--- a/client/react-app/package.json
+++ b/client/react-app/package.json
@@ -16,6 +16,7 @@
 		"mobx-react": "^7.5.3",
 		"next": "^14.2.24",
 		"next-fonts": "^1.5.1",
+		"next-svgr": "^0.0.2",
 		"node-fetch": "^3.3.2",
 		"react": "^18.2.0",
 		"react-animate-height": "^3.0.4",
@@ -26,6 +27,7 @@
 		"react-locomotive-scroll": "^0.2.2",
 		"react-router-dom": "^6.3.0",
 		"react-slick": "^0.29.0",
+		"sharp": "^0.32.1",
 		"slick-carousel": "^1.8.1"
 	},
 	"devDependencies": {
