--- a/client/react-app/package.json
+++ b/client/react-app/package.json
@@ -8,9 +8,11 @@
 	"dependencies": {
 		"@babel/runtime": "^7.26.9",
 		"@csstools/normalize.css": "^12.0.0",
+		"@studio-freight/lenis": "^1.0.42",
 		"axios": "^1.8.1",
 		"framer-motion": "^12.5.0",
 		"gsap": "^3.13.0",
+		"lenis": "^1.3.3",
 		"locomotive-scroll": "^4.1.4",
 		"mobx": "^6.6.2",
 		"mobx-react": "^7.5.3",
